# Authenitication-Application

./: main.py  pyproject.toml
src/: db.py  main.py
src/core/: config.py  exceptions.py
src/models/: session.py  user.py  verification_code.py
src/services/: email.py
src/utils/: app_error.py  token.py
